--- a/index.html
+++ b/index.html
@@ -3,86 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenging Clicker Game</title>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-      background: linear-gradient(120deg, #1e3c72, #2a5298);
-      color: #ffffff;
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
-
-    h1, h2 {
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    }
-
-    h1 {
-      font-size: 3em;
-      margin: 20px 0;
-    }
-
-    h2 {
-      font-size: 1.8em;
-      margin: 15px 0;
-    }
-
-    button {
-      padding: 15px 30px;
-      font-size: 1.2em;
-      border: none;
-      border-radius: 25px;
-      background: linear-gradient(to right, #ff7e5f, #feb47b);
-      color: white;
-      cursor: pointer;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-      transition: all 0.3s ease;
-    }
-
-    button:hover {
-      transform: scale(1.1);
-      box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
-    }
-
-    #click-button {
-      margin: 20px 0;
-      font-size: 1.5em;
-      background: linear-gradient(to right, #43cea2, #185a9d);
-    }
-
-    #level, #rebirths, #points {
-      font-size: 1.5em;
-      margin: 15px 0;
-      padding: 10px;
-      border-radius: 15px;
-      background: rgba(0, 0, 0, 0.2);
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    #progress-bar {
-      width: 80%;
-      margin: 20px auto;
-      height: 30px;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 15px;
-      overflow: hidden;
-    }
-
-    #progress {
-      height: 100%;
-      width: 0;
-      background: linear-gradient(to right, #ff512f, #dd2476);
-      transition: width 0.3s ease;
-    }
-
-    #settings-menu {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-    }
-  </style>
+  <title>Enhanced Clicker Game</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="main-menu">
@@ -118,83 +40,6 @@
     <button onclick="changeBackground()">Change Background</button>
   </div>
 
-  <script>
-    let points = 0;
-    let pointsPerClick = 1;
-    let level = 1;
-    let rebirths = 0;
-    const upgradeCosts = [10, 20, 50];
-    const upgradeEffects = [2, 5, 10];
-    let rebirthCost = 100;
-    let soundOn = true;
-
-    function startGame() {
-      document.getElementById("main-menu").style.display = "none";
-      document.getElementById("game-screen").style.display = "block";
-    }
-
-    function addPoint() {
-      points += pointsPerClick;
-      updateUI();
-      if (soundOn) playClickSound();
-      if (points >= level * 50) levelUp();
-    }
-
-    function levelUp() {
-      level++;
-      alert("Level up! Get ready for a challenge.");
-      updateUI();
-    }
-
-    function buyUpgrade(index) {
-      if (points >= upgradeCosts[index]) {
-        points -= upgradeCosts[index];
-        pointsPerClick += upgradeEffects[index];
-        upgradeCosts[index] *= 2;
-        updateUI();
-        alert(`Upgrade ${index + 1} purchased!`);
-      } else {
-        alert("Not enough points!");
-      }
-    }
-
-    function rebirth() {
-      if (points >= rebirthCost) {
-        rebirths++;
-        points = 0;
-        pointsPerClick += 5;
-        rebirthCost *= 2;
-        alert("Rebirth successful!");
-        updateUI();
-      } else {
-        alert("Not enough points to rebirth!");
-      }
-    }
-
-    function toggleSound() {
-      soundOn = !soundOn;
-      alert(`Sound is now ${soundOn ? "ON" : "OFF"}`);
-    }
-
-    function changeBackground() {
-      const colors = ["#1e3c72", "#2a5298", "#43cea2", "#185a9d", "#feb47b"];
-      document.body.style.background = `linear-gradient(to right, ${colors[Math.floor(Math.random() * colors.length)]})`;
-    }
-
-    function updateUI() {
-      document.getElementById("points").innerText = `Points: ${points}`;
-      document.getElementById("level").innerText = `Level: ${level}`;
-      document.getElementById("rebirths").innerText = `Rebirths: ${rebirths}`;
-      upgradeCosts.forEach((cost, index) => {
-        document.getElementById(`upgrade-cost-${index}`).innerText = cost;
-      });
-      document.getElementById("progress").style.width = `${(points / (level * 50)) * 100}%`;
-    }
-
-    function playClickSound() {
-      const audio = new Audio("https://www.soundjay.com/button/sounds/button-09.mp3");
-      audio.play();
-    }
-  </script>
+  <script src="scripts.js"></script>
 </body>
 </html>
