--- a/index.html
+++ b/index.html
@@ -1,17 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced Clicker Game</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div id="main-menu">
-    <h1>Enhanced Clicker Game</h1>
-    <button onclick="startGame()">Start Game</button>
-  </div>
-
   <div id="game-screen" style="display:none;">
     <div id="level">Level: 1</div>
     <div id="rebirths">Rebirths: 0</div>
@@ -32,14 +18,7 @@
       <h2>Rebirth</h2>
       <button onclick="rebirth()">Rebirth (<span id="rebirth-cost">100</span> Points)</button>
     </div>
-  </div>
 
-  <div id="settings-menu">
-    <h2>Settings</h2>
-    <button onclick="toggleSound()">Toggle Sound</button>
-    <button onclick="changeBackground()">Change Background</button>
+    <!-- Added Notification Log Section -->
+    <div id="notification-log"></div>
   </div>
-
-  <script src="scripts.js"></script>
-</body>
-</html>
