--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Enhanced Clicker Game</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="main-menu">
+    <h1>Enhanced Clicker Game</h1>
+    <button onclick="startGame()">Start Game</button>
+  </div>
+
   <div id="game-screen" style="display:none;">
     <div id="level">Level: 1</div>
     <div id="rebirths">Rebirths: 0</div>
     <div id="points">Points: 0</div>
-    <button id="click-button" onclick="addPoint()">Click Me!</button>
+    <!-- Replaced Click Button with Engaging Animated Icon -->
+    <div id="clickable-area" onclick="addPoint()"></div>
     <div id="progress-bar">
       <div id="progress"></div>
     </div>
@@ -19,6 +34,35 @@
       <button onclick="rebirth()">Rebirth (<span id="rebirth-cost">100</span> Points)</button>
     </div>
 
-    <!-- Added Notification Log Section -->
+    <div id="leaderboard">
+      <h2>Leaderboard</h2>
+      <ul id="leaderboard-list"></ul>
+    </div>
+
+    <div id="daily-reward-section">
+      <h2>Daily Reward</h2>
+      <button onclick="giveDailyReward()">Claim Reward</button>
+    </div>
+
+    <div id="achievement-log">
+      <h2>Achievements</h2>
+      <ul id="achievements-list"></ul>
+    </div>
+
     <div id="notification-log"></div>
   </div>
+
+  <div id="settings-menu">
+    <h2>Settings</h2>
+    <button onclick="toggleSound()">Toggle Sound</button>
+    <button onclick="changeBackground()">Change Background</button>
+  </div>
+
+  <!-- Background Music -->
+  <audio id="bg-music" loop>
+    <source src="https://www.bensound.com/bensound-music/bensound-energy.mp3" type="audio/mp3">
+  </audio>
+
+  <script src="scripts.js"></script>
+</body>
+</html>
