--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Main Menu -->
   <div id="main-menu">
     <h1>Abstract Clicker Game</h1>
     <button onclick="startGame()">Start Game</button>
   </div>
 
+  <!-- Game Screen -->
   <div id="game-screen" style="display:none;">
     <!-- Settings Button -->
     <div id="settings">
@@ -24,22 +26,26 @@
       <button onclick="toggleSound()">Toggle Sound</button>
       <button onclick="changeBackground()">Change Background</button>
       <button onclick="giveDailyReward()">Claim Daily Reward</button>
+      <button onclick="resetProgress()">Reset Progress</button>
       <button onclick="toggleSettingsMenu()">Close</button>
     </div>
 
+    <!-- Stats Section -->
     <div id="stats">
       <div id="level">Level: 1</div>
       <div id="rebirths">Rebirths: 0</div>
       <div id="points">Points: 0</div>
     </div>
 
-    <!-- Abstract clickable area -->
+    <!-- Abstract Clickable Area -->
     <div id="clickable-area" onclick="addPoint()"></div>
 
+    <!-- Progress Bar -->
     <div id="progress-bar">
       <div id="progress"></div>
     </div>
 
+    <!-- Shop Section -->
     <div id="shop">
       <h2>Shop</h2>
       <button onclick="buyUpgrade(0)">Upgrade 1 (<span id="upgrade-cost-0">10</span>)</button>
@@ -48,21 +54,25 @@
       <button onclick="buyAutoClicker()">Auto-Clicker (Cost: 100)</button>
     </div>
 
+    <!-- Rebirth Section -->
     <div id="rebirth-section">
       <h2>Rebirth</h2>
       <button onclick="rebirth()">Rebirth (<span id="rebirth-cost">100</span>)</button>
     </div>
 
+    <!-- Achievements Section -->
     <div id="achievement-log">
       <h2>Achievements</h2>
       <ul id="achievements-list"></ul>
     </div>
 
+    <!-- Leaderboard Section -->
     <div id="leaderboard">
       <h2>Your Leaderboard</h2>
       <ul id="leaderboard-list"></ul>
     </div>
 
+    <!-- Notification Log -->
     <div id="notification-log"></div>
   </div>
 
